objects/iContactforSF__iContact_Temp_Recipient__c.object
<CustomObject>
    <description>This is a temporary table to hold recipients of an iContact message.</description>
    <fields>
        <fullName>iContactforSF__ContactId__c</fullName>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Debug_Comments__c</fullName>
        <description>The comments associated with the debug log.</description>
        <label>Debug Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the associated record is apart of the debug logging for the sending process.</description>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Email__c</fullName>
        <description>The email address of the recipient.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>iContactforSF__IdString__c</fullName>
        <formula>Id&amp;if(mid(Id,10,1)=upper(mid(Id,10,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,11,1)=upper(mid(Id,11,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,12,1)=upper(mid(Id,12,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,13,1)=upper(mid(Id,13,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,14,1)=upper(mid(Id,14,1)), &quot;1&quot;, &quot;0&quot;)&amp;if(mid(Id,15,1)=upper(mid(Id,15,1)), &quot;1&quot;, &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IdString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Key__c</fullName>
        <description>Campaign + timestamp. Used as a unique key.</description>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__LeadId__c</fullName>
        <label>LeadId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContactId__c</fullName>
        <label>iContactId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>iContact Temp Recipient</label>
    <nameField>
        <label>tempRecipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Temp Recipients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>